--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <button id="annulla" class="btn">Annulla</button>
       </div>
     </div>
+    <div id="form-errore" class="ms_hidden">
+      <p id="checkme">inserisci il tuo nome & cognome</p>
+    </div>
     <!-- TICKET GENERATOR INFO -->
     <h2 class="ticketquote">IL TUO BIGLIETTO</h2>
     <div id="biglietto" class="ticketgenerator hidden">
