Miglioramento formato JS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <title>Calcola Il Prezzo Del Tuo Biglietto</title>
   </head>
   <body>
     <!-- INSERT YOUR DATA -->
@@ -34,7 +34,7 @@
         <button id="annulla" class="btn">Annulla</button>
       </div>
     </div>
-    <div id="form-errore" class="ms_hidden">
+    <div id="form-errore" class="hidden">
       <p id="checkme">inserisci il tuo nome & cognome</p>
     </div>
     <!-- TICKET GENERATOR INFO -->
