Miglioramento avviso errore JS

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="setting">
           <label for="fascia-eta">Fascia d'et&agrave;</label>
           <select id="fascia-eta">
+            <option value="--"> -- </option>
             <option value="minorenne">Minorenne</option>
             <option value="maggiorenne">Maggiorenne</option>
             <option value="over65">Over 65</option>
